2011-05-23  Dennis Cranston  <dennis_cranston@yahoo.com>

        * gsearchtool-support.c:
        Fix bug 649016, unable to open folders.
        Patch contributed by Edward Sheldrake.
	
2011-05-23  Dennis Cranston  <dennis_cranston@yahoo.com>

        * libgnomeui-deprecated/gsearchtool-entry.c:
        Fix bug 647072, segfault on window close.
        Patch contributed by Edward Sheldrake.

2010-10-17  Dennis Cranston  <dennis_cranston@yahoo.com>

        * gsearchtool.c, gsearchtool-callbacks.c,
        libgnomeui-deprecated/gsearchtool-entry.[ch]:
        Migrate code to GTK3.

2010-10-05  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool.c (gsearch_setup_goption_descriptions): 
	Fix bug 454650, fix display of --help output, by adding 
	setlocale() call and moving gettext calls. Contributed
	by Gabor Kelemen.
	
2010-09-28  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c (build_popup_menu_for_file),
	help/C/gnome-search-tool.xml: Fix bug 619499, open folder
	menu item can be misleading. Contributed by Andrew Fister.

2010-09-28  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-support.c (backslash_special_characters):  
	Fix bug 615787, searching for backslashes in text files.

2010-09-28  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c (build_popup_menu_for_file):
	Fixed some memory leaks.  Contributed by Viktors Petrovs.
	
2010-01-13  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: fix distcheck after the previous change.

2009-10-23  Dennis Cranston  <dennis_cranston@yahoo.com>

	* Makefile.am:  Ensure a generated schema file is not included 
	in the tarball. Based on patch submitted by Frederic Crozat.
	Bug 599317.
	
2009-10-21  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-support.c:  Fix a compiler warning.

2009-10-14  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool.c, gsearchtool-callbacks.[ch]:  Resurrect the 
	"--version" command line argument.
	