@@ -115,7 +115,8 @@ get_file_pixbuf (GSearchWindow * gsearch,
                  GFileInfo * file_info);
 gboolean
 open_file_with_filemanager (GtkWidget * window,
-                            const gchar * file);
+                            const gchar * file,
+                            gboolean open_parent);
 gboolean
 open_file_with_application (GtkWidget * window,
                             const gchar * file,
