@@ -1,3 +1,9 @@
+2011-06-24  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+        * gsearchtool-callbacks.c, gsearchtool-support.[ch]:
+        Allow nautilus to highlight the file when using the 
+	'Open Containing Folder' menu option.
+	
 2011-05-23  Dennis Cranston  <dennis_cranston@yahoo.com>
 
         * gsearchtool-support.c:
